# meta-sharp

./: axum_site_test.out  hello_response.json
aspect-core/benches/: aspect_overhead.rs
aspect-core/src/: aspect.rs  error.rs  joinpoint.rs  lib.rs
aspect-core/src/pointcut/: ast.rs  parser.rs  pattern.rs
aspect-core/tests/: integration.rs
aspect-driver/examples/: phase3_demo.rs
aspect-driver/src/: compiler.rs  extract.rs  generate.rs  lib.rs  mir_analyzer.rs
aspect-examples/: Cargo.toml  justfile
aspect-examples/src/: advanced_aspects.rs  api_server.rs  async_func.rs  axum_run.rs  caching.rs  logger.rs  logging.rs  pointcuts.rs  retry.rs  security.rs  timing.rs  transaction.rs  validation.rs
aspect-macros/src/: advice_macro.rs  aspect_attr.rs  codegen.rs  lib.rs  parsing.rs
aspect-runtime/src/: registry.rs
aspect-rustc-driver/examples/: direct_access.rs  function_ptr.rs  global_state.rs  mir_extraction.rs  working_extraction.rs
aspect-rustc-driver/src/: main.rs  main_working.rs
aspect-std/src/: authorization.rs  lib.rs  logging.rs  metrics.rs  timing.rs  validation.rs
cargo-aspect/src/: main.rs
